--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "livewire/livewire": "^3.0",
         "ralphjsmit/livewire-urls": "^1.4",
         "spatie/laravel-permission": "^6.4",
-        "stripe/stripe-php": "^15.3",
+        "stripe/stripe-php": "*",
         "tymon/jwt-auth": "@dev"
     },
     "require-dev": {
